# ibus-table-chinese

./: .gitignore  CMakeLists.txt  README  RELEASE-NOTES.txt  make-dist
metainfo/: ibus-table-chinese-array.appdata.xml  ibus-table-chinese-cangjie.appdata.xml  ibus-table-chinese-cantonese.appdata.xml  ibus-table-chinese-cantonyale.appdata.xml  ibus-table-chinese-easy.appdata.xml  ibus-table-chinese-erbi.appdata.xml  ibus-table-chinese-quick.appdata.xml  ibus-table-chinese-scj.appdata.xml  ibus-table-chinese-stroke5.appdata.xml  ibus-table-chinese-wu.appdata.xml  ibus-table-chinese-wubi-haifeng86.appdata.xml  ibus-table-chinese-wubi-jidian86.appdata.xml  ibus-table-chinese-yong.appdata.xml
tables/: CMakeLists.txt  zhuyin.txt
tables/array/: CMakeLists.txt  array30.head.in  array30_27489.txt  array30_ExtB.txt  array30_ExtCD_V2012A.txt
tables/cangjie/: CMakeLists.txt  cangjie-big.txt  cangjie3.txt  cangjie5.txt  improve_cangjie5.py
tables/cantonese/: CMakeLists.txt  cantonese.txt  cantonhk.txt  cantonyale.txt  improve_jyutping.py  jyutping.txt
tables/easy/: CMakeLists.txt  easy-big.txt
tables/erbi/: CMakeLists.txt  erbi-qs.txt  erbi.txt
tables/quick/: CMakeLists.txt  improve_quick5.py  quick-classic.txt  quick3.txt  quick5.txt
tables/scj/: CMakeLists.txt  scj6.txt
tables/stroke5/: CMakeLists.txt  stroke5.txt
tables/wu/: CMakeLists.txt  wu.txt
tables/wubi-haifeng/: CMakeLists.txt  COPYING  convertTable.sh  remove_cjk_compatibility_ideographs.py  wubi-haifeng86.UTF-8  wubi-haifeng86.head
tables/wubi-jidian/: CMakeLists.txt  wubi-jidian86.txt
tables/yong/: CMakeLists.txt  yong.txt
